Make body a flexbox, create flexbox divisions
Make the body of the HTML file a flexbox that fits other flexboxes
inside. This is to lay down the framework of the landing page as
a webpage is just a bunch of boxes within other boxes.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 </head>
 <body>
-    <h1>bruh</h1>
+    <div class="section-container">
+        <div id="section1"></div>
+        <div id="section2"></div>
+        <div id="section3"></div>
+        <div id="section4"></div>
+        <div id="section5"></div>
+    </div>
 </body>
 </html>
