--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     <div class="section-container">
-        <div id="section1"></div>
-        <div id="section2"></div>
-        <div id="section3"></div>
-        <div id="section4"></div>
-        <div id="section5"></div>
+        <div class="section section1"></div>
+        <div class="section section2"></div>
+        <div class="section section3"></div>
+        <div class="section section4"></div>
+        <div class="section section5"></div>
     </div>
 </body>
 </html>
