--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 </head>
 <body>
     <div class="section-container">
-        <div class="section section1"></div>
+        <div class="section section1">
+            <div class="header-section1">
+
+                <div class="header-left">
+                    <h2>Header Logo</h2>
+                </div>
+                <div class="header-right">
+                    <!-- links for header -->
+                    <ul>
+                        <li><a href="https://www.youtube.com/watch?v=_dfySxyifkk" target="_blank" rel="noopener noreferrer">header link one</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=gYvM7_zM4Xs" target="_blank" rel="noopener noreferrer">header link two</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=4qXRapXmE5k" target="_blank" rel="noopener noreferrer">header link three</a></li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+            
         <div class="section section2"></div>
         <div class="section section3"></div>
         <div class="section section4"></div>
